--- a/clase7/CSS/style.css
+++ b/clase7/CSS/style.css
@@ -1,11 +1,28 @@
-/*
-* {
+
+/* {
     background-color: blue;
 }
-*/
-
 /*esto es un comentario de una sola linea, CSS */
 /*y estoy usando css interno*/
-body {
+body /*aplicar estilo x selector*/ {
+    background-color: rgb(237, 238, 211);
+}
+/*aplicar estilo por id usando #*/
+#idsection{
+    background-color: darkgoldenrod;
+}
+#nav {
+    background-color: mediumslateblue;
+    width: 100%;
+        font-size: x-large;
+}
+/*aplicar estilo por clases usando .*/
+.links {
     background-color: aqua;
+}
+a {
+    text-decoration: none;
+}
+#linkActive {
+    color:burlywood
 }
