--- a/tp-integrador/css/style.css
+++ b/tp-integrador/css/style.css
@@ -16,6 +16,7 @@
 .card-img-overlay {
     text-align: right;
     padding-top: 20%;
+    padding-right: 5%;
 }
 .card-img-overlay {
     background: #0008;
